# sparsh

./: .gitignore  README.md  example.txt
sparsh/: CMakeLists.txt  package.xml
sparsh_braille/: CMakeLists.txt  package.xml
sparsh_braille/include/sparsh_braille/: braille.h
sparsh_braille/src/: braille.cpp  main.cpp
sparsh_control/: CMakeLists.txt  package.xml
sparsh_control/include/sparsh_control/: control.h
sparsh_control/src/: control.cpp  main.cpp
src/computation/: CMakeLists.txt  package.xml
src/computation/include/computation/: low_level.h
src/computation/src/: a.txt  image_manip.cpp  low_level_meta.cpp  main.cpp
src/gui/: CMakeLists.txt  ReadMe.md  caller.py  package.xml  requirements.txt  sparsh_gui_1.py  test_2_pyqt.ui  test_3.py  test_qt.py
src/gui/scripts/: interface.py  setup.sh  sparsh_gui_1.py  sparsh_gui_1.ui  voice_feedback.py
src/gui/scripts/data/: sparsh_state.yaml  string_for_voice.txt
src/rqt_mypkg/: package.xml
src/sparsh_computation/: CMakeLists.txt  README.md  package.xml
src/sparsh_computation/config/: braille.yaml  braille_dict.yaml  sparsh.yaml
src/sparsh_computation/launch/: sparsh.launch
src/sparsh_computation/scripts/: .gitignore  column_control.py  example.txt  main.py  memory.py  ocr.py  test.py  test2.cpp
src/sparsh_computation/urdf/: sparsh.xacro  sparsh_plugins.xacro
