<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>sparsh_control</name>
  <version>0.0.1</version>
  <description>Package that takes encoded braille and controlles the device</description>
  <maintainer email="sparsh@lmao.com">sparsh</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>
